--- a/tasks/Linux.yml
+++ b/tasks/Linux.yml
@@ -147,9 +147,9 @@
 
 - name: Add '--replace' configuration argument
   set_fact:
-    build_server_cmd_args: "{{ build_server_cmd_args }} + ['--replace']"
-    deployment_server_cmd_args: "{{ deployment_server_cmd_args }} + ['--replace']"
-    resource_server_cmd_args: "{{ resource_server_cmd_args }} + ['--replace']"
+    build_server_cmd_args: "{{ build_server_cmd_args + ['--replace'] }}"
+    deployment_server_cmd_args: "{{ deployment_server_cmd_args + ['--replace'] }}"
+    resource_server_cmd_args: "{{ resource_server_cmd_args + ['--replace'] }}"
   when:
     - az_devops_agent_replace_existing
 
